Fix cards showing overflow

--- a/src/app/components/content/app-features/features.component.scss
+++ b/src/app/components/content/app-features/features.component.scss
@@ -50,7 +50,6 @@
       mat-card-content {
         line-height: 13pt;
         text-align: justify;
-        overflow: auto;
       }
 
       mat-card-actions {
