--- a/src/app/components/content/app-home/home.component.scss
+++ b/src/app/components/content/app-home/home.component.scss
@@ -89,7 +89,6 @@
         mat-card-content {
           line-height: 13pt;
           text-align: justify;
-          overflow: auto;
         }
       }
     }
